@@ -9,7 +9,9 @@
           <object class="wxStaticText" name="stName">
             
             
+            
             <label>Address</label>
+            
             
             
             <pos>5,7d</pos>
@@ -17,7 +19,9 @@
           <object class="wxTextCtrl" name="txtName">
             
             
+            
             <pos>70,5d</pos>
+            
             
             
             <size>135,-1d</size>
@@ -25,7 +29,9 @@
           <object class="wxStaticText" name="stDescription">
             
             
+            
             <label>Description</label>
+            
             
             
             <pos>5,22d</pos>
@@ -33,7 +39,9 @@
           <object class="wxTextCtrl" name="txtDescription">
             
             
+            
             <pos>70,20d</pos>
+            
             
             
             <size>135,-1d</size>
@@ -41,7 +49,9 @@
           <object class="wxStaticText" name="stService">
             
             
+            
             <label>Service</label>
+            
             
             
             <pos>5,37d</pos>
@@ -49,7 +59,9 @@
           <object class="wxTextCtrl" name="txtService">
             
             
+            
             <pos>70,35d</pos>
+            
             
             
             <size>135,-1d</size>
@@ -57,7 +69,9 @@
           <object class="wxStaticText" name="stPort">
             
             
+            
             <label>Port</label>
+            
             
             
             <pos>5,52d</pos>
@@ -65,29 +79,37 @@
           <object class="wxTextCtrl" name="txtPort">
             
             
+            
             <pos>70,50d</pos>
             
             
-            <size>26,-1d</size>
+            
+            <size>28,-1d</size>
           </object>
           <object class="wxStaticText" name="stSSL">
+            
             
             
             <label>SSL</label>
             
             
-            <pos>100,52d</pos>
+            
+            <pos>105,52d</pos>
           </object>
           <object class="wxComboBox" name="cbSSL">
+            
             
             
             <pos>120,50d</pos>
             
             
+            
             <size>85,12d</size>
             
             
+            
             <style>wxCB_READONLY|wxCB_DROPDOWN</style>
+            
             
             
             <content/>
@@ -95,7 +117,9 @@
           <object class="wxStaticText" name="stDatabase">
             
             
+            
             <label>Maintenance DB</label>
+            
             
             
             <pos>5,67d</pos>
@@ -103,13 +127,17 @@
           <object class="wxComboBox" name="cbDatabase">
             
             
+            
             <pos>70,65d</pos>
+            
             
             
             <size>135,12d</size>
             
             
+            
             <content/>
+            
             
             
             <style>wxCB_DROPDOWN</style>
@@ -117,7 +145,9 @@
           <object class="wxStaticText" name="stUsername">
             
             
+            
             <label>Username</label>
+            
             
             
             <pos>5,82d</pos>
@@ -125,7 +155,9 @@
           <object class="wxTextCtrl" name="txtUsername">
             
             
+            
             <pos>70,80d</pos>
+            
             
             
             <size>135,-1d</size>
@@ -133,7 +165,9 @@
           <object class="wxStaticText" name="stTryConnect">
             
             
+            
             <label>Connect now</label>
+            
             
             
             <pos>5,97d</pos>
@@ -141,13 +175,17 @@
           <object class="wxCheckBox" name="chkTryConnect">
             
             
+            
             <label></label>
+            
             
             
             <checked>1</checked>
             
             
+            
             <pos>70,95d</pos>
+            
             
             
             <size>12,12d</size>
@@ -155,7 +193,9 @@
           <object class="wxStaticText" name="stStorePwd">
             
             
+            
             <label>store password</label>
+            
             
             
             <pos>105,97d</pos>
@@ -163,13 +203,17 @@
           <object class="wxCheckBox" name="chkStorePwd">
             
             
+            
             <label></label>
+            
             
             
             <checked>1</checked>
             
             
+            
             <pos>170,95d</pos>
+            
             
             
             <size>12,12d</size>
@@ -177,7 +221,9 @@
           <object class="wxStaticText" name="stPassword">
             
             
+            
             <label>Password</label>
+            
             
             
             <pos>5,112d</pos>
@@ -185,15 +231,19 @@
           <object class="wxTextCtrl" name="txtPassword">
             
             
+            
             <pos>70,110d</pos>
+            
             
             
             <style>wxTE_PASSWORD</style>
             
             
+            
             <size>135,-1d</size>
           </object>
         </object>
+        
         
         
         <selected>1</selected>
@@ -204,7 +254,9 @@
     <object class="wxButton" name="wxID_HELP">
       
       
+      
       <label>Help</label>
+      
       
       
       <pos>2,150d</pos>
@@ -212,10 +264,13 @@
     <object class="wxButton" name="wxID_OK">
       
       
+      
       <label>OK</label>
       
       
+      
       <default>1</default>
+      
       
       
       <pos>113,150d</pos>
@@ -223,7 +278,9 @@
     <object class="wxButton" name="wxID_CANCEL">
       
       
+      
       <label>Cancel</label>
+      
       
       
       <pos>166,150d</pos>
