@@ -8,6 +8,9 @@
     #pragma hdrstop
 #endif
 
+#ifndef WX_PRECOMP
+    #include <wx/wx.h>
+#endif
 #include <wx/filesys.h>
 #include <wx/fs_mem.h>
 #include <wx/xrc/xmlres.h>
@@ -6961,13 +6964,13 @@ static unsigned char xml_res_file_36[] = {
 97,115,115,61,34,119,120,84,101,120,116,67,116,114,108,34,32,110,97,109,
 101,61,34,116,120,116,80,111,114,116,34,62,10,32,32,32,32,32,32,32,32,32,
 32,32,32,60,112,111,115,62,55,48,44,53,48,100,60,47,112,111,115,62,10,32,
-32,32,32,32,32,32,32,32,32,32,32,60,115,105,122,101,62,50,54,44,45,49,100,
+32,32,32,32,32,32,32,32,32,32,32,60,115,105,122,101,62,50,56,44,45,49,100,
 60,47,115,105,122,101,62,10,32,32,32,32,32,32,32,32,32,32,60,47,111,98,
 106,101,99,116,62,10,32,32,32,32,32,32,32,32,32,32,60,111,98,106,101,99,
 116,32,99,108,97,115,115,61,34,119,120,83,116,97,116,105,99,84,101,120,
 116,34,32,110,97,109,101,61,34,115,116,83,83,76,34,62,10,32,32,32,32,32,
 32,32,32,32,32,32,32,60,108,97,98,101,108,62,83,83,76,60,47,108,97,98,101,
-108,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,112,111,115,62,49,48,48,
+108,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,112,111,115,62,49,48,53,
 44,53,50,100,60,47,112,111,115,62,10,32,32,32,32,32,32,32,32,32,32,60,47,
 111,98,106,101,99,116,62,10,32,32,32,32,32,32,32,32,32,32,60,111,98,106,
 101,99,116,32,99,108,97,115,115,61,34,119,120,67,111,109,98,111,66,111,
